--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.4.0",
     "@astrojs/tailwind": "^4.0.0",
     "@astrojs/vercel": "^3.7.0",
     "astro": "^2.8.1",
